# imspeed

./: .gitignore  README.md  main.py  pyproject.toml
config/: speed.yaml
in/: 15122025_axamer_lizum_runs_segment_4.gpx
scripts/: run.sh  update.sh
src/ski/: __init__.py  cli.py  config.py  create_fcpxml.py  utils.py
src/ski/fcp/: __init__.py  final_cut_pro.py  model.py
src/ski/gpx/: __init__.py  gpx.py  model.py
src/ski/resources/: templates.py
